updated hc changelog

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -11,8 +11,317 @@ rel="stylesheet">
 <link rel="icon" href="/assets/images/hc-with-bg-v2.ico" />
 </head>
 <body class="changelog_body">
-    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 19/11/2022</h1>
+    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 23/07/2023</h1>
+<hr>
+      <h2> v12.3.01 - full release - 10/07/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/94">#94</a></h2>
+     <h3> changed </h3>
+    <ul>
+      <li>readme.md</li>
+    </ul>
+   <hr class="test">
+ <h2> v12.3.01 - rc 1 - 10/07/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/93">#93</a></h2>
+     <h3> changed </h3>
+    <ul>
+      <li>readme.md</li>
+    </ul>
+   <hr class="test">
+ <h2> v12.3.01 - dev 1 - 10/07/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/2497c3ca15a0f99bccb7d04e3b5a8149c6696b3b">#dev1</a></h2>
+     <h3> changed </h3>
+    <ul>
+      <li>readme.md</li>
+    </ul>
+   <hr class="test">
+     <h2> v12.3 - full release - 10/07/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/92">#92</a></h2>
+     <h3> changed </h3>
+    <ul>
+      <li>project.html</li>
+      <li>about.html</li>
+      <li>html link code</li>
+      <li>404.html</li>
+    </ul>
+   <hr class="test">
+    <h2> v12.3 - rc 1 - 10/07/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/91">#91</a></h2>
+     <h3> changed </h3>
+    <ul>
+      <li>project.html</li>
+      <li>about.html</li>
+      <li>html link code</li>
+      <li>404.html</li>
+    </ul>
+   <hr class="test">
+    <h2> v12.3 - dev 1 - 10/07/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/883bb889d7ba0687a11f96118674a462332b8ca8">#dev1</a></h2>
+     <h3> changed </h3>
+    <ul>
+      <li>project.html</li>
+      <li>about.html</li>
+      <li>html link code</li>
+      <li>404.html</li>
+    </ul>
+<hr>
+    <h2> v12.2 - full release - 20/06/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/90">#90</a></h2>
+    <h3> added </h3>
+    <ul>
+      <li>new intro picture on index.html</li>
+      <li>link to v12.1 of hannahcodes.co.uk code</li>
+    </ul>
+     <h3> changed </h3>
+    <ul>
+      <li>project links and images on project.html and index.html</li>
+      <li>readme.md</li>
+    </ul>
+   <hr class="test">
+    <h2> v12.2 - rc 1 - 20/06/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/89">#89</a></h2>
+    <h3> added </h3>
+    <ul>
+      <li>new intro picture on index.html</li>
+      <li>link to v12.1 of hannahcodes.co.uk code</li>
+    </ul>
+     <h3> changed </h3>
+    <ul>
+      <li>project links and images on project.html and index.html</li>
+      <li>readme.md</li>
+    </ul>
+   <hr class="test">
+    <h2> v12.2 - dev 4 - 20/06/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/346164272c8b0a23aa6b63ceedec1ae2a57e92ac">#dev4</a></h2>
+    <h3> added </h3>
+    <ul>
+      <li>link to v12.1 of hannahcodes.co.uk code</li>
+    </ul>
+     <h3> changed </h3>
+    <ul>
+      <li>project images on project.html and index.html</li>
+    </ul>
+   <hr class="test">
+    <h2> v12.2 - dev 3 - 20/06/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/bcf6a392feadb9eef7b3d59399662b27a0de135b">#dev3</a></h2>
+    <h3> changed </h3>
+    <ul>
+      <li>project links and images on project.html and index.html</li>
+      <li>readme.md</li>
+    </ul>
+   <hr class="test">
+   <h2> v12.2 - dev 2 - 13/06/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/f06824827882a0daca3bfe141b5c3528b41d15bb">#dev2</a></h2>
+    <h3> changed </h3>
+    <ul>
+      <li>project links and images on project.html</li>
+    </ul>
+   <hr class="test">
+   <h2> v12.2 - dev 1 - 08/06/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/ea7b126cad104dbc73885c8ac7ac637c139ddd5b">#dev1</a></h2>
+    <h3> added </h3>
+    <ul>
+      <li>new intro picture on index.html</li>
+    </ul>
+   <hr> 
+    <h2> v12.1 - full release - 05/06/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/88">#88</a></h2>
+    <h3> added </h3>
+    <ul> 
+      <li>new project discription on index.html project cards</li>
+    </ul>
+    <h3> removed </h3>
+    <ul>
+      <li>blog section on index.html</li>
+    </ul>
+   <h3> changed </h3>
+    <ul>
+       <li>introduction text on index.html</li>
+      <li>copyright date from 2022 to 2023</li>
+      <li>readme.md</li>
+      <li>links on /projects/hannahcodes.html</li>
+      <li>about me section</li>
+      <li>project images</li>
+    </ul>
+   <hr class="test">
+    <h2> v12.1 - rc 3 - 05/06/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/87">#87</a></h2>
+    <h3> removed </h3>
+    <ul>
+      <li>blog section on index.html</li>
+    </ul>
+    <h3> changed </h3>
+    <ul>
+      <li>project images</li>
+    </ul>
+   <hr class="test">
+   <h2> v12.1 - dev 10 - 05/06/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/8cebc35c6bcadc229021dc02f7d7903b2cdb8da3">#dev10</a></h2>
+    <h3> removed </h3>
+    <ul>
+      <li>blog section on index.html</li>
+    </ul>
+    <h3> changed </h3>
+    <ul>
+      <li>project images</li>
+    </ul>
+   <hr class="test">
+   <h2> v12.1 - rc 2 - 05/06/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/86">#86</a></h2>
+    <h3> added </h3>
+    <ul> 
+      <li>new project discription on index.html project cards</li>
+    </ul>
+   <h3> changed </h3>
+    <ul>
+      <li>links on /projects/hannahcodes.html</li>
+      <li>about me section</li>
+      <li>project images</li>
+    </ul>
+   <hr class="test">
+    <h2> v12.1 - dev 9 - 05/06/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/2f1152c98b18e44059556bd51199bc106c39827a">#dev9</a></h2>
+    <h3> changed </h3>
+    <ul>
+      <li>project images</li>
+    </ul>
+   <hr class="test">
+    <h2> v12.1 - dev 8 - 24/04/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/777774671877854af3949878491a54ce89301c5d">#dev8</a></h2>
+    <h3> added </h3>
+    <ul>
+      <li>new project discription on index.html project cards</li>
+    </ul>
+   <hr class="test">
+    <h2> v12.1 - dev 7 - 23/03/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/2e19b8fd8bf2fe5b17fd484a87da4b7471c67807">#dev7</a></h2>
+    <h3> changed </h3>
+    <ul>
+      <li>about me section</li>
+    </ul>
+   <hr class="test">
+    <h2> v12.1 - dev 6 - 17/03/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/4d131a6297b995cbd3d2176c36d68a19bee3948e">#dev6</a></h2>
+    <h3> changed </h3>
+    <ul>
+      <li>links on /projects/hannahcodes.html</li>
+    </ul>
+   <hr class="test">
+     <h2> v12.1 - rc 1 - 17/03/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/85">#85</a></h2>
+    <h3> changed </h3>
+    <ul>
+      <li>introduction text on index.html</li>
+      <li>copyright date from 2022 to 2023</li>
+      <li>readme.md</li>
+    </ul>
+   <hr class="test">
+   <h2> v12.1 - dev 5 - 17/03/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/00169812c10c81bf3c1fab6d6501216ebd9f79de">#dev5</a></h2>
+    <h3> changed </h3>
+    <ul>
+      <li>readme.md</li>
+    </ul>
+   <hr class="test">
+     <h2> v12.1 - dev 4 - 17/03/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/d257a22306657312f8ad8d6374780404a10d8607">#dev4</a></h2>
+    <h3> changed </h3>
+    <ul>
+      <li>introduction text on index.html</li>
+    </ul>
+   <hr class="test">
+    <h2> v12.1 - dev 3 - 17/03/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/ae2d9d98446c37b1cba734dd8dce376ec6739c22">#dev3</a></h2>
+    <h3> changed </h3>
+    <ul>
+      <li>copyright date from 2022 to 2023</li>
+    </ul>
+   <hr class="test">
+   <h2> v12.1 - dev 2 - 03/01/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/c863e22cebbff3229ff7ee32f466ad1ffcd8eb26">#dev2</a></h2>
+    <h3> removed </h3>
+    <ul>
+      <li>some scss/css code</li>
+    </ul>
+   <hr class="test">
+    <h2> v12.1 - dev 1 - 03/01/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/30ad8144aeb1fdb5c922caca18c182b381c68430">#dev1</a></h2>
+    <h3> changed </h3>
+    <ul>
+      <li>introduction text on index.html</li>
+
+    </ul>
+<hr class="test">
+    <h2> v12.1 - pre dev 1 - 20/12/2022 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/fdc99439faaaaa2c5eb3a63878bb6db100b1adfe">#predev1</a></h2>
+    <h3> removed </h3>
+    <ul>
+   <li>terms file/ folder</li>
+    </ul>
     <hr>
+    <h2> v12 - full release - 20/12/2022 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/83">#83</a></h2>
+    <h3> added </h3>
+    <ul> 
+        <li>new project pages/ ui design</li>
+    </ul>
+     <h3> removed </h3>
+    <ul>
+        <li>social links on nav bar </li>
+        <li>some text and images on index.html and about.html</li>
+        
+    </ul>
+    <h3> changed </h3>
+    <ul>
+        <li>projet.html location</li>
+        <li>twitter and github links</li>
+        <li>readme.md </li>
+        <li>about section </li>
+        <li>project images </li>
+    </ul>
+    <hr class="test">
+    <h2> v12 - rc 3 - 20/12/2022 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/84">#84</a></h2>
+    <h3> changed </h3>
+    <ul> 
+        <li>readme.md </li>
+    </ul>
+    <hr class="test">
+    <h2> v12 - dev 7 - 20/12/2022 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/d1d7341d58606be32ca2dda1c48250a7896b373b">#dev7</a></h2>
+    <h3> changed </h3>
+    <ul> 
+        <li>readme.md </li>
+    </ul>
+    <hr class="test">
+     <h2> v12 - rc 2 - 20/12/2022 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/82">#82</a></h2>
+    <h3> changed </h3>
+    <ul> 
+        <li>about section </li>
+        <li>project images </li>
+    </ul>
+    <hr class="test">
+     <h2> v12 - dev 6 - 20/12/2022 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/3ba6778b72357bc226b5d1237938c60159ca589d">#dev6</a></h2>
+    <h3> changed </h3>
+    <ul>
+        <li>project images </li>
+    </ul>
+    <hr class="test">
+     <h2> v12 - dev 5 - 20/12/2022 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/2ad192f35d93cb2959fcc392f8012db15664e762">#dev5</a></h2>
+    <h3> changed </h3>
+    <ul>
+        <li>about section </li>
+    </ul>
+    <hr class="test">
+     <h2> v12 - rc 1 - 20/12/2022 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/81">#81</a></h2>
+    <h3> added </h3>
+    <ul>
+        <li>new project pages/ ui design</li>
+    </ul>
+    <h3> removed </h3>
+    <ul>
+        <li>social links on nav bar </li>
+        <li>some text and images on index.html and about.html</li>
+    </ul>
+    <h3> fixed </h3>
+    <ul>
+        <li>new project page ui not displaying correctly on small screens </li>
+    </ul>
+    <h3> changed </h3>
+    <ul>
+        <li>projet.html location</li>
+        <li>twitter and github links</li>
+        <li>readme.md </li>
+    </ul>
+    <hr class="test">
+    <h2> v12 - dev 4 - 20/12/2022 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/829bfc3d073447174980f27c527d7b775dfb7e8b">#dev4</a></h2>
+    <h3> changed </h3>
+    <ul>
+        <li>readme.md </li>
+    </ul>
+    <hr class="test">
+     <h2> v12 - dev 3 - 20/12/2022 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/d43267e3e1c62a3571b573d2d625de81ddba2f41">#dev3</a></h2>
+    <h3> fixed </h3>
+    <ul>
+        <li>new project page ui not display correctly on small screens </li>
+    </ul>
+    <hr class="test">
+    <h2> v12 - dev 2 - 20/12/2022 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/3784bb7c8dbe38c593f4c44bbfe29a879d671bc4">#dev2</a></h2>
+    <h3> removed </h3>
+    <ul>
+        <li>social links on nav bar </li>
+        <li>some text and images on index.html and about.html</li>
+    </ul>
+    <hr class="test">
     <h2> v12 - dev 1 - 19/11/2022 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/f52586aaf86f92125d613ae37071ff53657aa3bc">#dev1</a></h2>
     <h3> added </h3>
     <ul>
