updated hc changelog

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -12,7 +12,17 @@ rel="stylesheet">
 </head>
 <body class="changelog_body">
     <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 23/07/2023</h1>
-<hr>
+    <hr>
+    <h2> v12.3.1 - dev 1 - 23/07/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/6890b47eba468db29237fdb3aa83e2be9a77517f">#dev1</a></h2>
+     <h3> fixed </h3>
+    <ul>
+      <li>link to project.html on about.html</li>
+    </ul>
+     <h3> changed </h3>
+    <ul>
+      <li>codescape project image</li>
+    </ul>
+     <hr>
       <h2> v12.3.01 - full release - 10/07/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/94">#94</a></h2>
      <h3> changed </h3>
     <ul>
