--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -11,8 +11,30 @@ rel="stylesheet">
 <link rel="icon" href="/assets/images/hc-with-bg-v2.ico" />
 </head>
 <body class="changelog_body">
-    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 23/07/2023</h1>
+    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 26/07/2023</h1>
     <hr>
+     <h2> v12.3.1 - dev 4 - 26/07/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/a77f3b07b6a3145b26cbbfdfebef5b04b7f736db">#dev4</a></h2>
+     <h3> fixed </h3>
+    <ul>
+      <li>header text showing on top of mobile nav bar when open and viewing on a small device</li>
+    </ul>
+    <h3> changed </h3>
+    <ul>
+      <li>mobile nav bar design when open</li>
+    </ul>
+    <hr class="test"> 
+     <h2> v12.3.1 - dev 3 - 26/07/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/77493f36c43f61aaa9e4a2e0122fb5d0dfcfe76d">#dev3</a></h2>
+     <h3> fixed </h3>
+    <ul>
+      <li>accordion's on about.html work section when viewing on a small device</li>
+    </ul>
+    <hr class="test"> 
+    <h2> v12.3.1 - dev 2 - 26/07/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/4026c70d874225cd643000f7eefaf9a6f2daf59e">#dev2</a></h2>
+     <h3> added </h3>
+    <ul>
+      <li>accordion's on about.html work section</li>
+    </ul>
+    <hr class="test"> 
     <h2> v12.3.1 - dev 1 - 23/07/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/6890b47eba468db29237fdb3aa83e2be9a77517f">#dev1</a></h2>
      <h3> fixed </h3>
     <ul>
