updated hc changelog

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -13,6 +13,12 @@ rel="stylesheet">
 <body class="changelog_body">
     <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 26/07/2023</h1>
     <hr>
+    <h2> v12.3.1 - dev 5 - 26/07/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/b57cdf8c0497b0b4d91b1acf19c339a864671df3">#dev5</a></h2>
+     <h3> fixed </h3>
+    <ul>
+      <li>fixed accordions background on lightmode</li>
+    </ul>
+    <hr class="test"> 
      <h2> v12.3.1 - dev 4 - 26/07/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/a77f3b07b6a3145b26cbbfdfebef5b04b7f736db">#dev4</a></h2>
      <h3> fixed </h3>
     <ul>
