updated hc changelog

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -11,8 +11,19 @@ rel="stylesheet">
 <link rel="icon" href="/assets/images/hc-with-bg-v2.ico" />
 </head>
 <body class="changelog_body">
-    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 26/07/2023</h1>
+    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 28/07/2023</h1>
     <hr>
+    <h2> v12.4 - dev 6 - 28/07/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/925ea41964830d9ce0a9d1806ceb22e9c315c6c8">#dev6</a></h2>
+     <h3> added </h3>
+    <ul>
+      <li>new project.html image preview on index.html project card</li>
+    </ul>
+     <h3> fixed </h3>
+    <ul>
+      <li>fixed header text on project.html</li>
+      <li>fixed accordions background on dark mode</li>
+    </ul>
+    <hr class="test"> 
     <h2> v12.4 - dev 5 - 26/07/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/b57cdf8c0497b0b4d91b1acf19c339a864671df3">#dev5</a></h2>
      <h3> fixed </h3>
     <ul>
