--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@ rel="stylesheet">
 <body class="changelog_body">
     <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 15/08/2023</h1>
 <hr>  
+<h2> v13 - dev 19 - 15/08/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/0147f6039eb7c7f2c86e9ca3be7cbd3a495aa87d">#dev19</a></h2>
+    <h3 class="fixed"> fixed </h3>
+    <ul>
+       <li> about.html who am I section's aligmnent and increased the right margin for &lt;span&gt; elements</li>
+    </ul>
+    <hr class="test">
+<h2> v13 - dev 18 - 15/08/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/fcad35e4f064f34e479ab5e1a81feccd7bff31da">#dev18</a></h2>
+    <h3 class="fixed"> fixed </h3>
+    <ul>
+       <li> url link to changelog on 404.html</li>
+    </ul>
+    <hr class="test">
 <h2> v13 - dev 17 - 15/08/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/f8c1995660712d024b95b4003f949e20c38e9c33">#dev17</a></h2>
     <h3 class="changed"> changed </h3>
     <ul>
