--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@ rel="stylesheet">
             href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/f3135146166d9f72c3c8f75593dbf2ffa9a59f83">#predev1</a>
     <h3 class="amended"> amended </h3>
     <ul>
-        <li>projet.html location</li>
+        <li>project.html location</li>
     </ul>
     <hr>
     <h2> v11.3.2 - 26/10/2022 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/80">#80</a></h2>
