--- a/index.new.html
+++ b/index.new.html
@@ -251,6 +251,7 @@
                     </ul>
                 </li>
                 <li>
+<h3> dev 1 <a href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'"> website</a></h3>
                     <strong>Improved:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
                         <li>Performance</li>
@@ -259,38 +260,39 @@
             </ul>
         </div>
 <div class="version">
-            <h2>V2.0.0 - 2021 <a href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'">#102</a> <a href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'">#Details</a></h2>
+            <h2>V3.0.0 - 2021 <a href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'"> website</a></h2>
             <ul>
                 <li>
                     <strong>Added:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
-                        <li>New feature</li>
-                        <li>New feature</li>
+                        <li>brand new homepage design</li>
                     </ul>
                 </li>
                 <li>
-                    <strong>Improved:</strong>
+                    <strong>Fixed:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
-                        <li>Performance</li>
+                        <li>some code issues</li>
                     </ul>
                 </li>
             </ul>
         </div>
 <hr>
         <div class="version">
-            <h2>V2.0.0 - 2021 <a href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'">#102</a> <a href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'">#Details</a></h2>
+            <h2>V2.0.0 - 2021<a href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'"> website</a></h2>
             <ul>
                 <li>
                     <strong>Added:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
-                        <li>New feature</li>
-                        <li>New feature</li>
+                        <li>New website menu layout</li>
+                        <li>New dark mode</li>
                     </ul>
                 </li>
                 <li>
-                    <strong>Improved:</strong>
+                    <strong>Fixed:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
-                        <li>Performance</li>
+                        <li>'view mobile' site link on footer</li>
+                        <li>other code issues </li>
+
                     </ul>
                 </li>
             </ul>
