further change to deisgn

--- a/index.new.html
+++ b/index.new.html
@@ -252,24 +252,92 @@
                 </li>
                 <li>
 <h3> dev 1 <a href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'"> website</a></h3>
-                    <strong>Improved:</strong>
+                    <strong>Fixed:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
-                        <li>Performance</li>
+                        <li>Menu icon aligment</li>
                     </ul>
                 </li>
             </ul>
         </div>
+<hr>
 <div class="version">
-            <h2>V3.0.0 - 2021 <a href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'"> website</a></h2>
+            <h2>V7.0.0 - 2021 <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #7</a> <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #6</a> <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #5</a> <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #4</a> <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #3</a> <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #2</a> <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #1</a> <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
             <ul>
                 <li>
-                    <strong>Added:</strong>
+                 <strong class="added">added</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>new header image</li>
+                      </ll>
+                    </ul>
+                    <li>
+                    <strong class="fixed">fixed:</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>some code issues</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+<hr>
+<div class="version">
+            <h2>V6.0.0 - 2021 <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
+            <ul>
+                <li>
+                 <strong class="added">added</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>new header image</li>
+                      </ll>
+                    </ul>
+                    <li>
+                    <strong class="fixed">fixed:</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>some code issues</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+<hr>
+<div class="version">
+            <h2>V5.0.0 - 2021 <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
+            <ul>
+                <li>
+                 <strong class="added">published</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>completely new redeisgned website where the code has been built from fresh</li>
+                      </ll>
+                    </ul>
+                    <li>
+                    <strong class="amended">amended:</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>combined desktop and mobile code into one .html file using @media quarys (making for the first time mobile repsonive)</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+<hr>
+<div class="version">
+            <h2>V4.0.0 - 2021 <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
+            <ul>
+                <li>
+                    <strong class="fixed">Fixed:</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>menu icon aligment</li>
+                        <li>plus other code fixes </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+<hr>
+<div class="version">
+            <h2>V3.0.0 - 2021 <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
+            <ul>
+                <li>
+                    <strong class="added">Added:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
                         <li>brand new homepage design</li>
                     </ul>
                 </li>
                 <li>
-                    <strong>Fixed:</strong>
+                    <strong class="fixed">Fixed:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
                         <li>some code issues</li>
                     </ul>
@@ -278,17 +346,17 @@
         </div>
 <hr>
         <div class="version">
-            <h2>V2.0.0 - 2021<a href="#" style="color: #333838; text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'"> website</a></h2>
+            <h2>V2.0.0 - 2021<a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
             <ul>
                 <li>
-                    <strong>Added:</strong>
+                    <strong class="added">Added:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
                         <li>New website menu layout</li>
                         <li>New dark mode</li>
                     </ul>
                 </li>
                 <li>
-                    <strong>Fixed:</strong>
+                    <strong class="fixed">Fixed:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
                         <li>'view mobile' site link on footer</li>
                         <li>other code issues </li>
@@ -299,10 +367,10 @@
         </div>
 <hr>
         <div class="version">
-            <h2>V1.0.0 - 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v1/desktop/index.html" style="color: #333838; text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#333838'">website</a></h2>
+            <h2>V1.0.0 - 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v1/desktop/index.html" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a></h2>
             <ul>
                 <li>
-                    <strong>published:</strong>
+                    <strong class="added">published:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
                         <li> the very first version of hannahcodes.co.uk</li>
                     </ul>
