--- a/index.new.html
+++ b/index.new.html
@@ -261,7 +261,7 @@
         </div>
 <hr>
 <div class="version">
-            <h2>V7.0.0 - 2021 <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #7</a> <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #6</a> <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #5</a> <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #4</a> <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #3</a> <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #2</a> <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #1</a> <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
+            <h2>V7.0.0 - 2021 <a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #7</a> <a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #6</a> <a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #5</a> <a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #4</a> <a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #3</a> <a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #2</a> <a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #1</a> <a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
             <ul>
                 <li>
                  <strong class="added">added</strong>
@@ -279,7 +279,7 @@
         </div>
 <hr>
 <div class="version">
-            <h2>V6.0.0 - 2021 <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
+            <h2>V6.0.0 - 2021 <a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
             <ul>
                 <li>
                  <strong class="added">added</strong>
@@ -297,7 +297,7 @@
         </div>
 <hr>
 <div class="version">
-            <h2>V5.0.0 - 2021 <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
+            <h2>V5.0.0 - 2021 <a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
             <ul>
                 <li>
                  <strong class="added">published</strong>
@@ -315,7 +315,7 @@
         </div>
 <hr>
 <div class="version">
-            <h2>V4.0.0 - 2021 <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
+            <h2>V4.0.0 - 2021 <a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
             <ul>
                 <li>
                     <strong class="fixed">Fixed:</strong>
@@ -328,7 +328,7 @@
         </div>
 <hr>
 <div class="version">
-            <h2>V3.0.0 - 2021 <a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
+            <h2>V3.0.0 - 2021 <a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
             <ul>
                 <li>
                     <strong class="added">Added:</strong>
@@ -346,7 +346,7 @@
         </div>
 <hr>
         <div class="version">
-            <h2>V2.0.0 - 2021<a href="#" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
+            <h2>V2.0.0 - 2021<a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> </h2>
             <ul>
                 <li>
                     <strong class="added">Added:</strong>
@@ -367,7 +367,7 @@
         </div>
 <hr>
         <div class="version">
-            <h2>V1.0.0 - 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v1/desktop/index.html" style="color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.8em;" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a></h2>
+            <h2>V1.0.0 - 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v1/desktop/index.html" class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a></h2>
             <ul>
                 <li>
                     <strong class="added">published:</strong>
