--- a/index.new.html
+++ b/index.new.html
@@ -114,7 +114,7 @@
             <div class="panel">
                 <ul>
                     <li><a href="#">v4 source-code</a></li>
-                    <li><a href="#">v4 homepage</a></li>
+                    <li><a href="https://old.hannahcodes.co.uk/hannahcodes/v4/index.html">v4 homepage</a></li>
                     <li><a href="#v4">release note</a></li>
                 </ul>
             </div>
@@ -125,7 +125,7 @@
             <div class="panel">
                 <ul>
                     <li><a href="#">v3 source-code</a></li>
-                    <li><a href="#">v3 homepage</a></li>
+                    <li><a href="https://old.hannahcodes.co.uk/hannahcodes/v3/desktop/index.html">v3 homepage</a></li>
                     <li><a href="#v3">release note</a></li>
                 </ul>
             </div>
@@ -136,7 +136,7 @@
             <div class="panel">
                 <ul>
                     <li><a href="#">v2 source-code</a></li>
-                    <li><a href="#">v2 homepage</a></li>
+                    <li><a href="https://old.hannahcodes.co.uk/hannahcodes/v2/desktop/index.html">v2 homepage</a></li>
                     <li><a href="#v2">release note</a></li>
                 </ul>
             </div>
@@ -147,7 +147,7 @@
             <div class="panel">
                 <ul>
                     <li><a href="#">v1 source-code</a></li>
-                    <li><a href="#">v1 homepage</a></li>
+                    <li><a href="https://old.hannahcodes.co.uk/hannahcodes/v1/desktop/index.html">v1 homepage</a></li>
                     <li><a href="#v1">release note</a></li>
                 </ul>
             </div>
@@ -322,8 +322,9 @@
                     href="#" class="a_link" onmouseover="this.style.color='#bb86fc'"
                     onmouseout="this.style.color='#b8b5b58e'"> #2</a> <a href="#" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #1</a> <a
-                    href="#" class="a_link" onmouseover="this.style.color='#bb86fc'"
-                    onmouseout="this.style.color='#b8b5b58e'"> website</a> </h3>
+                    href="https://old.hannahcodes.co.uk/hannahcodes/v7/index.html" class="a_link"
+                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a>
+            </h3>
             <ul>
                 <li>
                     <strong class="removed">removed</strong>
@@ -351,8 +352,9 @@
         <hr id="v6">
         <div class="version">
             <h2>V6.0.0</h2>
-            <h3 class="version_date"> 2021 <a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'"
-                    onmouseout="this.style.color='#b8b5b58e'"> website</a> </h3>
+            <h3 class="version_date"> 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v6/index.html"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    website</a> </h3>
             <ul>
                 <li>
                     <strong class="added">added</strong>
@@ -371,8 +373,9 @@
         <hr id="v5">
         <div class="version">
             <h2>V5.0.0 </h2>
-            <h3 class="version_date"> 2021 <a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'"
-                    onmouseout="this.style.color='#b8b5b58e'"> website</a> </h3>
+            <h3 class="version_date"> 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v5/index.html"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    website</a> </h3>
             <ul>
                 <li>
                     <strong class="added">published</strong>
@@ -392,8 +395,9 @@
         <hr id="v4">
         <div class="version">
             <h2>V4.0.0 </h2>
-            <h3 class="version_date"> 2021 <a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'"
-                    onmouseout="this.style.color='#b8b5b58e'"> website</a> </h3>
+            <h3 class="version_date"> 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v4/index.html"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    website</a> </h3>
             <ul>
                 <li>
                     <strong class="fixed">Fixed:</strong>
