--- a/index.new.html
+++ b/index.new.html
@@ -358,7 +358,10 @@
             <h2>V6.0.0</h2>
             <h3 class="version_date"> 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v6/index.html"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    website</a> </h3>
+                    website</a> <a
+                    href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v6"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    source-code</a></h3>
             <ul>
                 <li>
                     <strong class="added">added</strong>
@@ -379,7 +382,10 @@
             <h2>V5.0.0 </h2>
             <h3 class="version_date"> 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v5/index.html"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    website</a> </h3>
+                    website</a> <a
+                    href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v5"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    source-code</a></h3>
             <ul>
                 <li>
                     <strong class="added">published</strong>
@@ -401,7 +407,10 @@
             <h2>V4.0.0 </h2>
             <h3 class="version_date"> 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v4/index.html"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    website</a> </h3>
+                    website</a> <a
+                    href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v4"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    source-code</a></h3>
             <ul>
                 <li>
                     <strong class="fixed">Fixed:</strong>
@@ -416,7 +425,10 @@
         <div class="version">
             <h2>V3.0.0 </h2>
             <h3> 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v3/desktop/index.html" class="a_link"
-                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a>
+                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a> <a
+                    href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v3"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    source-code</a>
             </h3>
             <ul>
                 <li>
@@ -438,7 +450,10 @@
             <h2>V2.0.0 </h2>
             <h3 class="version_date"> 2021<a href="https://old.hannahcodes.co.uk/hannahcodes/v2/desktop/index.html"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    website</a> </h3>
+                    website</a> <a
+                    href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v2"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    source-code</a></h3>
             <ul>
                 <li>
                     <strong class="added">Added:</strong>
@@ -460,9 +475,12 @@
         <hr id="v1">
         <div class="version">
             <h2>V1.0.0 </h2>
-            <h3 class="version_date" 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v1/desktop/index.html"
-                class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                website</a></h3>
+            <h3 class="version_date">2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v1/desktop/index.html"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    website</a> <a
+                    href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v1"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    source-code</a></h3>
             <ul>
                 <li>
                     <strong class="added">published:</strong>
