--- a/index.new.html
+++ b/index.new.html
@@ -17,13 +17,75 @@
     <p> updated 22/02/2025</p>
     <div class="sidebar">
         <h2 style="text-align: center;">latet version</h2>
-        <button class="accordion">Version 13 <span class="icon">⬇️</span></button>
+        <button class="accordion">Version 13.1 <span class="icon">⬇️</span></button>
         <div class="panel">
             <ul>
-                <li><a href="#">v13 source-code</a></li>
-                <li><a href="#">v13 homepage</a></li>
+                <li><a href="#">v13.1 source-code</a></li>
+                <li><a href="#">v13.1 homepage</a></li>
+                <li><a href="#v13.1">release note</a></li>
             </ul>
         </div>
+        </li>
+        <li>
+            <hr>
+            <button class="accordion">Version 13 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v13 source-code</a></li>
+                    <li><a href="#">v13 homepage</a></li>
+                    <li><a href="#v13">release note</a></li>
+                </ul>
+            </div>
+            <hr>
+            <button class="accordion">Version 12.4 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v12.4 source-code</a></li>
+                    <li><a href="#">v12.4 homepage</a></li>
+                    <li><a href="#v12.4">release note</a></li>
+                </ul>
+            </div>
+        <li>
+            <hr>
+            <button class="accordion">Version 12.3.1 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v12.3.1 source-code</a></li>
+                    <li><a href="#">v12.3.1 homepage</a></li>
+                    <li><a href="#v12.3.1">release note</a></li>
+                </ul>
+            </div>
+        <li>
+            <hr>
+            <button class="accordion">Version 12.3 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v12.3 source-code</a></li>
+                    <li><a href="#">v12.3 homepage</a></li>
+                    <li><a href="#v12.3">release note</a></li>
+                </ul>
+            </div>
+        <li>
+            <hr>
+            <button class="accordion">Version 12.2 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v12.2 source-code</a></li>
+                    <li><a href="#">v12.2 homepage</a></li>
+                    <li><a href="#v12.2">release note</a></li>
+                </ul>
+            </div>
+        </li>
+        <li>
+            <hr>
+            <button class="accordion">Version 12.1 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v12.1 source-code</a></li>
+                    <li><a href="#">v12.1 homepage</a></li>
+                    <li><a href="#v12.1">release note</a></li>
+                </ul>
+            </div>
         </li>
         <li>
             <hr>
@@ -32,6 +94,95 @@
                 <ul>
                     <li><a href="#">v12 source-code</a></li>
                     <li><a href="#">v12 homepage</a></li>
+                    <li><a href="#v12">release note</a></li>
+                </ul>
+            </div>
+        </li>
+        <li>
+            <hr>
+            <button class="accordion">Version 11.3.2 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v11.3.2 source-code</a></li>
+                    <li><a href="#">v11.3.2 homepage</a></li>
+                    <li><a href="#v11.3.2">release note</a></li>
+                </ul>
+            </div>
+        </li>
+        <li>
+            <hr>
+            <button class="accordion">Version 11.3.1 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v11.3.1 source-code</a></li>
+                    <li><a href="#">v11.3.1 homepage</a></li>
+                    <li><a href="#v11.3.1">release note</a></li>
+                </ul>
+            </div>
+        </li>
+        <li>
+            <hr>
+            <button class="accordion">Version 11.3 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v11.3 source-code</a></li>
+                    <li><a href="#">v11.3 homepage</a></li>
+                    <li><a href="#v11.3">release note</a></li>
+                </ul>
+            </div>
+        </li>
+        <li>
+            <hr>
+            <button class="accordion">Version 11.2.1 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v11.2.1 source-code</a></li>
+                    <li><a href="#">v11.2.1 homepage</a></li>
+                    <li><a href="#v11.2.1">release note</a></li>
+                </ul>
+            </div>
+        </li>
+        <li>
+            <hr>
+            <button class="accordion">Version 11.2 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v11.2 source-code</a></li>
+                    <li><a href="#">v11.2 homepage</a></li>
+                    <li><a href="#v11.2">release note</a></li>
+                </ul>
+            </div>
+        </li>
+        <li>
+            <hr>
+            <button class="accordion">Version 11.1.2 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v11.1.2 source-code</a></li>
+                    <li><a href="#">v11.1.2 homepage</a></li>
+                    <li><a href="#v11.1.2">release note</a></li>
+                </ul>
+            </div>
+        </li>
+        <li>
+            <hr>
+            <button class="accordion">Version 11.1.1 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v11.1.1 source-code</a></li>
+                    <li><a href="#">v11.1.1 homepage</a></li>
+                    <li><a href="#v11.1.1">release note</a></li>
+                </ul>
+            </div>
+        </li>
+        <li>
+            <hr>
+            <button class="accordion">Version 11.1 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v11.1 source-code</a></li>
+                    <li><a href="#">v11.1 homepage</a></li>
+                    <li><a href="#v11.1">release note</a></li>
                 </ul>
             </div>
         </li>
@@ -42,6 +193,29 @@
                 <ul>
                     <li><a href="#">v11 source-code</a></li>
                     <li><a href="#">v11 homepage</a></li>
+                    <li><a href="#v11">release note</a></li>
+                </ul>
+            </div>
+        </li>
+        <li>
+            <hr>
+            <button class="accordion">Version 10.2 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v10.2 source-code</a></li>
+                    <li><a href="#">v10.2ß homepage</a></li>
+                    <li><a href="#v10.2">release note</a></li>
+                </ul>
+            </div>
+        </li>
+        <li>
+            <hr>
+            <button class="accordion">Version 10.1 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v10.1 source-code</a></li>
+                    <li><a href="#">v10.1 homepage</a></li>
+                    <li><a href="#v10.1">release note</a></li>
                 </ul>
             </div>
         </li>
@@ -52,6 +226,7 @@
                 <ul>
                     <li><a href="#">v10 source-code</a></li>
                     <li><a href="#">v10 homepage</a></li>
+                    <li><a href="#v10">release note</a></li>
                 </ul>
             </div>
         </li>
@@ -62,6 +237,18 @@
                 <ul>
                     <li><a href="#">v9 source-code</a></li>
                     <li><a href="#">v9 homepage</a></li>
+                    <li><a href="#v9">release note</a></li>
+                </ul>
+            </div>
+        </li>
+        <li>
+            <hr>
+            <button class="accordion">Version 8.1 <span class="icon">⬇️</span></button>
+            <div class="panel">
+                <ul>
+                    <li><a href="#">v8.1 source-code</a></li>
+                    <li><a href="#">v8.1 homepage</a></li>
+                    <li><a href="#v8.1">release note</a></li>
                 </ul>
             </div>
         </li>
@@ -72,6 +259,7 @@
                 <ul>
                     <li><a href="#">v8 source-code</a></li>
                     <li><a href="#">v8 homepage</a></li>
+                    <li><a href="#v8">release note</a></li>
                 </ul>
             </div>
         </li>
@@ -288,10 +476,44 @@
         </div>
         <hr id="v8">
         <div class="version">
+            <h2>V8.1.0</h2>
+            <h3 class="version_date"> 27/12/21 - 09/01/22 <a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/9" class="a_link"
+                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    #9</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v8/index.html" class="a_link"
+                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a>
+                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v8"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    source-code</a>
+            </h3>
+            <ul>
+                <li>
+                    <strong class="added">added</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>new about section on index.html</li>
+                        <li> new about.html page</li>
+                        </ll>
+                    </ul>
+                <li>
+                    <strong class="fixed">fixed:</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>some code issues</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+
+        <hr id="v8">
+        <div class="version">
             <h2>V8.0.0</h2>
-            <h3 class="version_date"> 07/12/21 <a href="#" class="a_link" onmouseover="this.style.color='#bb86fc'"
-                    onmouseout="this.style.color='#b8b5b58e'"> #9</a> <a href="#" class="a_link"
-                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a></h3>
+            <h3 class="version_date"> 07/12/21 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/9"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    #9</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v8/index.html" class="a_link"
+                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a>
+                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v8"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    source-code</a>
+            </h3>
             <ul>
                 <li>
                     <strong class="added">added</strong>
@@ -327,7 +549,10 @@
                     href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/1" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> #1</a> <a
                     href="https://old.hannahcodes.co.uk/hannahcodes/v7/index.html" class="a_link"
-                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a>
+                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a><a
+                    href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v7"
+                    class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    source-code</a>
             </h3>
             <ul>
                 <li>
